--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "use-reducer-thunk": "^1.1.0",
     "web-vitals": "^2.1.4"
