--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.3",
+    "swiper": "^11.0.4",
     "use-reducer-thunk": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
